--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,37 @@
 new_session: yes 
 rmd_files: [ "index.rmd",
-             "acknowledgements.Rmd"
-                         ]
+             "acknowledgements.rmd",
+             "life.rmd",
+             "basic_chemistry.rmd",
+             "organic_chemistry.rmd",
+             # "cell_structure.rmd",
+             # "membrane_structure.rmd",
+             # "metabolism.rmd",
+             # "photosynthesis_respiration.rmd",
+             # "cell_cycle.rmd",
+             # "mendelian_inheritance.rmd",
+             # "molecular_biology.rmd",
+             # "gene_expression.rmd",
+             # "bacteria_archaea_virus.rmd",
+             # "protists.rmd",
+             # "evolution.rmd",
+             # "systematics.rmd",
+             # "fungi.rmd",
+             # "plants.rmd",
+             # "invertebrates.rmd",
+             # "vertebrates.rmd",
+             # "animal_organization.rmd",
+             # "circulatory_system.rmd",
+             # "immune_system.rmd",
+             # "respiratory_system.rmd",
+             # "digestive_system.rmd",
+             # "excretory_system.rmd",
+             # "nervous_system.rmd",
+             # "sense_organs.rmd",
+             # "locomotion.rmd",
+             # "endocrine_system.rmd",
+             # "reproduction.rmd"
+             # "development.Rmd"
+           ]
 output_dir: docs
 before_chapter_script: "_common.R"
