--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,8 +4,8 @@ rmd_files: [ "index.rmd",
              "life.rmd",
              "basic_chemistry.rmd",
              "organic_chemistry.rmd",
-             # "cell_structure.rmd",
-             # "membrane_structure.rmd",
+             "cell_structure.rmd",
+             "membrane_structure.rmd",
              # "metabolism.rmd",
              # "photosynthesis_respiration.rmd",
              # "cell_cycle.rmd",
