--- a/_output.yaml
+++ b/_output.yaml
@@ -7,11 +7,11 @@ bookdown::gitbook:
       before:             |
         <li><strong><a href="./">Biology</a></strong></li>
     edit:
-      link:               https://github.com/nikolaussucher/biology/edit/master/%s
+      link:               https://github.com/nikolaussucher/biology-text/edit/master/%s
       text:               "Edit"
     sharing:              no
 #    download:             ["pdf", "epub"]
-    download:             ["pdf"]
+#    download:             ["pdf"]
 #bookdown::html_chapters:
 #  css:                    [css/style.css, css/toc.css]
  
