--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -6,10 +6,10 @@ rmd_files: [ "index.rmd",
              "organic_chemistry.rmd",
              "cell_structure.rmd",
              "membrane_structure.rmd",
-             # "metabolism.rmd",
-             # "photosynthesis_respiration.rmd",
-             # "cell_cycle.rmd",
-             # "mendelian_inheritance.rmd",
+             "metabolism.rmd",
+             "photosynthesis_respiration.rmd",
+             "cell_cycle.rmd",
+             "mendelian_inheritance.rmd",
              # "molecular_biology.rmd",
              # "gene_expression.rmd",
              # "bacteria_archaea_virus.rmd",
