--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -24,7 +24,7 @@ rmd_files: [ "index.rmd",
              "immune_system.rmd",
              "respiratory_system.rmd",
              "digestive_system.rmd",
-             # "excretory_system.rmd",
+             "excretory_system.rmd",
              "nervous_system.rmd",
              # "sense_organs.rmd",
              "locomotion.rmd",
