added solution section to basic chemistry and diffusion and osmosis figures to membrane structure; recompiled pdf

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,36 +1,36 @@
 new_session: true 
 rmd_files: [ "index.rmd",
-             "acknowledgements.rmd",
-             "biology.rmd",
+            #  "acknowledgements.rmd",
+            #  "biology.rmd",
              "basic_chemistry.rmd",
-             "organic_chemistry.rmd",
-             "cell_structure.rmd",
+            #  "organic_chemistry.rmd",
+            #  "cell_structure.rmd",
              "membrane_structure.rmd",
-             "bioenergetics.rmd",
-             "photosynthesis_respiration.rmd",
-             "cell_cycle.rmd",
-             "reproduction.rmd",        	                                	
-             "mendelian_inheritance.rmd",
-             "molecular_biology.rmd",
-             "gene_regulation.rmd",
-             "bacteria.rmd",
-             "protists.rmd",
-             "evolution.rmd",
-             "systematics.rmd",
-             "fungi.rmd",
-             "plants.rmd",
-             "animals.rmd",
-             "circulatory_system.rmd",
-             "immune_system.rmd",
-             "respiratory_system.rmd",
-             "digestive_system.rmd",
-             "excretory_system.rmd",
-             "nervous_system.rmd",
-             "sensation.rmd",
-             "locomotion.rmd",
-             "endocrine_system.rmd",
-             "reproductive_system.rmd",
-             "development.rmd"
+            #  "bioenergetics.rmd",
+            #  "photosynthesis_respiration.rmd",
+            #  "cell_cycle.rmd",
+            #  "reproduction.rmd",
+            #  "mendelian_inheritance.rmd",
+            #  "molecular_biology.rmd",
+            #  "gene_regulation.rmd",
+            #  "bacteria.rmd",
+            #  "protists.rmd",
+            #  "evolution.rmd",
+            #  "systematics.rmd",
+            #  "fungi.rmd",
+            #  "plants.rmd",
+            #  "animals.rmd",
+            #  "circulatory_system.rmd",
+            #  "immune_system.rmd",
+            #  "respiratory_system.rmd",
+            #  "digestive_system.rmd",
+            #  "excretory_system.rmd",
+            #  "nervous_system.rmd",
+            #  "sensation.rmd",
+            #  "locomotion.rmd",
+            #  "endocrine_system.rmd",
+            #  "reproductive_system.rmd",
+            #  "development.rmd"
            ]
 output_dir: docs
 before_chapter_script: "_common.R"
