--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,5 +1,5 @@
 new_session: true 
-rmd_files: [ "index.rmd",
+rmd_files: [ "index.Rmd",
              "acknowledgements.rmd",
              "biology.rmd",
              "basic_chemistry.rmd",
